# KarPlayer

./: .gitignore  KarPlayer_TZ.md  LICENSE  NOTICE  README.md  gradle.properties  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/kotlin/com/karplayer/: KarPlayerApp.kt  MainActivity.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_launcher_monochrome.xml  tv_banner.xml
app/src/main/res/values/: colors.xml  themes.xml
gradle/: libs.versions.toml
player/: build.gradle.kts
player/src/main/kotlin/com/karplayer/player/: LowLatencyRenderersFactory.kt  MediaInfo.kt  PlayerManager.kt  SrtDataSourceFactory.kt  SrtMediaSourceFactory.kt
srt/: build.gradle.kts
srt/src/main/cpp/: CMakeLists.txt  srt_jni.cpp
srt/src/main/kotlin/com/karplayer/srt/: SrtDataSource.kt  SrtNative.kt  SrtOptions.kt  SrtSocket.kt  SrtStats.kt
srt/src/test/kotlin/com/karplayer/srt/: SrtStatsTest.kt
ui/: build.gradle.kts
ui/src/main/kotlin/com/karplayer/ui/: AboutDialog.kt  ConnectionConfig.kt  ConnectionScreen.kt  FocusHighlight.kt  FocusableControls.kt  KarPlayerNavRoot.kt  NetworkUtil.kt  Platform.kt  PlayerScreen.kt  PlayerViewModel.kt  QuickConnectScreen.kt  TvAwareTextField.kt
ui/src/main/res/drawable/: quick_bg_test_pattern.xml
